# studying_pytest

./: pyproject.toml
